# tutorial_opencv

./: CMakeLists.txt  package.xml
src/: color2gray.cpp
